apps/app1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
  annotations:
    argocd.argoproj.io/sync-wave: '1'
spec:
  ports:
  - port: 80
  selector:
    app: frontend
