apps/app1/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-route
  labels:
    app: frontend
  annotations:
    argocd.argoproj.io/sync-wave: '1'
spec:
  to:
    kind: Service
    name: frontend-svc
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
